--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
          <img src="icons/video1.PNG" class="menu-selection-icon">
          <div class="menu-selection-text">
             <h3 class="menu-selection-heading">Trip to Wroxham Broad</h3>
-            <span class="menu-selection-desc">Some text about the video goes here</span>
+            <span class="menu-selection-desc">Some text about the video goes hereSome text about the video goes hereSome te</span>
          </div>
          
       </div>
