--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,8 @@ main{
     border-width: 2px;
     border-radius: 5px;
     width:100%;
+    margin-top:5px;
+    margin-bottom:5px;
 }
 
 .menu-selection-icon{
