test with local filepaths

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@ document.addEventListener('keydown', function(e){
                 <img src="<%= item.albumPath+'/'+item.imagePaths[0] %>" class="menu-selection-icon">
                 <div class="menu-selection-text">
                     <h3 class="menu-selection-heading"><%= item.title %></h3>
-                    <span class="menu-selection-desc">A collection of photos from a recent trip.</span>
+                    <span class="menu-selection-desc">A collection of photos.</span>
                 </div>
             </div>
         <%}}); %>
