--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@ body{
     background-image: url('icons/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: none;
 }
 
 main{
